# NOME

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  Makefile.linux  Makefile.parser  Makefile.parser~  NOME  README.md  appveyor.yml  bankFlexBison.cpp  bspline.cpp  bspline.h  controlpanel.cpp  controlpanel.h  curvature.h  face.cpp  face.h  frenet_serret_frame.cpp  group.cpp  group.h  lex.nom.c  lexer.cpp  lexer.l  lexerStl.cpp  lexerStl.l  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mesh.cpp  mesh.h  minimum_torsion.cpp  moc_ConsolidateWindow.cpp  moc_GroupWindow.cpp  moc_SliderNew.cpp  moc_SliderOffsetNew.cpp  moc_SliderSubdivisionNew.cpp  (+47 more)
Lewis/: BSplineNew.cpp  BSplineNew.h  BankNew.cpp  BankNew.h  BezierCurveNew.cpp  BezierCurveNew.h  CircleNew.cpp  CircleNew.h  ConsolidateWindow.h  Data.cpp  Data.cpp.QZ7132  Data.cpp.autosave  Data.h  FunnelNew.cpp  FunnelNew.h  Group.cpp  Group.h  GroupNew.cpp  GroupNew.h  IO.cpp  IO.h  Instance.cpp  Instance.h  InstanceNew.cpp  InstanceNew.h  InstanceNew_copy.cpp  InstanceNew_copy.h  Mesh.cpp  Mesh.h  MeshNew.cpp  MeshNew.cpp.autosave  MeshNew.h  MySliderNew.h  Node.cpp  Node.h  ObjectNew.cpp  PolylineNew.cpp  PolylineNew.h  Reader.cpp  Reader.h  (+14 more)
Math/: AreaAllocator.cpp  AreaAllocator.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Color.cpp  Color.h  Frustum.cpp  Frustum.h  LICENSE.txt  MathAPI.h  MathDefs.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4.cpp  Matrix4.h  PODVector.h  Plane.cpp  Plane.h  Polyhedron.cpp  Polyhedron.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Sphere.cpp  Sphere.h  StringHash.cpp  StringHash.h  Vector2.cpp  Vector2.h  Vector3.cpp  (+3 more)
compilerBank/: lexerBank.cpp  lexerBank.l  parserBank.cpp  parserBank.hpp  parserBank.y
compilerNome/: #parser.cpp#  #parser.y#  lexer.cpp  lexer.l  parser.cpp  parser.hpp  parser.y
compilerObj/: lexerObj.cpp  lexerObj.l  parserObj.cpp  parserObj.hpp  parserObj.y
compilerStl/: lexerStl.cpp  lexerStl.l  parserStl.cpp  parserStl.hpp  parserStl.y
examples/: Vaarberg1d_consm.nom  Vaarberg1d_consm_1a.nom  Vaarberg1d_consm_1a.nom~  Vaarberg1d_consm_1b.nom  Vaarberg1d_consm_1d.nom  Vaarberg1d_del.nom  ribbon2.nom  ribbon2.nom~
examples/cube/: cube.nom  cube2.nom  cubeFace.nom  cubeFace2.nom  cube_mesh.nom  save1.nom
examples/eva_hild/: hild1.nom
examples/kleinbottle/: #kleinbottle.nom#  .#kleinbottle.nom
examples/ribbon/: #ribbon.nom#  mobius.nom~  ribbon.nom  ribbon.nom~  ribbon2.nom  ribbon2.nom~  ribbon3.nom  ribbon3.nom~  ribbon_save.nom
examples/rimline/: ribbon.nom  ribbon.nom~  ribbon2.nom  ribbon2.nom~  rimline.nom
examples/testParser/: 1111.nom  222.nom  333.nom  Thursday.nom  aa  aaSaved.nom  aaa.nom  c8.nom  cd1cons.nom  cd2cons.nom  comp1.nom  cube.nom  cubeHelp.nom  egfyeguf.nom  face.nom  final.nom  fixedFile.nom  funnelCube.nom  gauthier.nom  new3.nom  sectioned.nom  start2.nom  start3.nom  start4.nom  sweep.nom  sweep.nom~  sweepCube.nom  sweepCube.nom~  tedtstdf.nom  testL.nom  tstructure.nom  tstructure3.nom  tstructure4.nom
examples/testParser/April/: Dyck-rim.nom  Dyck5blob.nom  Dyck6cons1.nom  TDyckcons1.nom  TDyckcons1_rename.nom  bspline.nom  circle.nom  groupingFixed.nom  help.nom  help2.nom  test.nom  test2.nom  tunnelConsolidated.nom  tunnelConsolidatedReal.nom
examples/testParser/BSplineTest/: bspline.nom  dasdas.nom
newNOME/: #Data.cpp#  BSplineNew.cpp  BankNew.cpp  BankNew.h  BezierCurveNew.cpp  BezierCurveNew.h  CircleNew.cpp  CircleNew.h  ConsolidateWindow.cpp  ConsolidateWindow.h  Data.cpp  Data.h  FunnelNew.cpp  GroupNew.cpp  GroupNew.h  GroupWindow.cpp  GroupWindow.h  InstanceNew.cpp  InstanceNew.h  MeshNew.cpp  MeshNew.cpp.autosave  MeshNew.h  MySliderNew.cpp  Node.h  ObjectNew.h  Octree.cpp  Octree.h  OctreeProxy.cpp  OctreeProxy.h  OffsetNew.cpp  OffsetNew.h  PolylineNew.cpp  PolylineNew.h  Reader.cpp  Reader.h  Session.cpp  Session.cpp.KL6488  Session.h  Session.h.autosave  SliderNew.cpp  (+15 more)
release/: moc_ConsolidateWindow.cpp  moc_MyMainWindow.cpp  moc_MySliderNew.cpp  moc_SliderNew.cpp  moc_SliderOffsetNew.cpp  moc_SliderSubdivisionNew.cpp  moc_SliderWindow.cpp  moc_controlpanel.cpp  moc_mainwindow.cpp  moc_myslider.cpp  moc_nomeglwidget.cpp  moc_sliderpanel.cpp
